Add JDK 17 debug JVM opens